2019-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Added even more XWD header
	validation logic.  Addresses problems noted by email from Hongxu
	Chen to the graphicsmagick-security mail alias on Wed, 17 Apr 2019
	and entitled "Multiple crashes (FPE and invalid read) when
	processing XWD files".  Also addresses additional issues noted
	that an attacker could request to allocate an arbitrary amount of
	memory based on ncolors and the claimed header size.

2019-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Add more XWD header validation
	logic.  Addresses problems noted by email from Hongxu Chen to the
	graphicsmagick-security mail alias on Sun, 14 Apr 2019 and
	entitled "Multiple crashes (FPE and invalid read) when processing
	XWD files".

2019-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdb.c (WritePDBImage): Assure that input scanline is
	cleared in order to cover up some decoder bug.  May fix 14215
	"graphicsmagick/coder_PDB_fuzzer: Use-of-uninitialized-value in
	WritePDBImage", which I have not been able to reproduce.

	* magick/render.c (DrawPrimitive): Check primitive point x/y
	values for NaN.
	(DrawImage): Fix oss-fuzz issue 14173
	"graphicsmagick/coder_MVG_fuzzer: Integer-overflow in DrawImage".

	* magick/pixel_cache.c (SetNexus): Fix oss-fuzz issue 14208
	"graphicsmagick/coder_MVG_fuzzer: Integer-overflow in SetNexus".

2019-04-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/display.c: Add even more const declarations.

	* coders/mat.c (WriteMATLABImage): Add completely missing error
	handling.  Fixes SourceForge issue #604 "heap-buffer-overflow in
	function WriteMATLABImage of coders/mat.c".

2019-04-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdb.c (WritePDBImage): Fix SourceForge issue #605
	"heap-buffer-overflow in function WritePDBImage of coders/pdb.c".

	* magick/widget.c: Add many const declarations.
