@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190417"
-#define public MagickPackageReleaseDate "snapshot-20190417"
+#define public MagickPackageVersionAddendum ".020190420"
+#define public MagickPackageReleaseDate "snapshot-20190420"
